--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "dotenv": "^16.0.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
+    "date-fns": "^2.29.1",
     "firebase": "^9.21.0",
     "next": "13.4.1",
     "react": "18.2.0",
